--- a/ui.apps/resource/frontend/src/styles/hbk-111/tailwind/tailwind.css
+++ b/ui.apps/resource/frontend/src/styles/hbk-111/tailwind/tailwind.css
@@ -45,6 +45,64 @@
       font-display: swap;
       src: local('Roboto BoldItalic'), local('Roboto-BoldItalic'), url("/public/fonts/Roboto/Roboto-BoldItalic.ttf") format('truetype');
     }
+
+    /* Montserrat font  */
+    @font-face {
+      font-family: 'Montserrat';
+       font-style: normal;
+       font-weight: 400;
+       font-display: swap;
+       src: local('Montserrat Regular'), local('Montserrat-Regular'), url("/public/fonts/Montserrat/Montserrat-Regular.ttf") format('truetype');
+      }
+      @font-face {
+         font-family: 'Montserrat';
+         font-style: italic;
+         font-weight: 400;
+         font-display: swap;
+         src: local('Montserrat Italic'), local('Montserrat-Italic'), url("/public/fonts/Montserrat/Montserrat-Italic.ttf") format('truetype');
+      }
+      @font-face {
+         font-family: 'Montserrat';
+         font-style: normal;
+         font-weight: 500;
+         font-display: swap;
+         src: local('Montserrat Medium'), local('Montserrat-Medium'), url("/public/fonts/Montserrat/Montserrat-Medium.ttf") format('truetype');
+       }
+       @font-face {
+         font-family: 'Montserrat';
+         font-style: italic;
+         font-weight: 500;
+         font-display: swap;
+         src: local('Montserrat MediumItalic'), local('Montserrat-MediumItalic'), url("/public/fonts/Montserrat/Montserrat-MediumItalic.ttf") format('truetype');
+       }
+       @font-face {
+         font-family: 'Montserrat';
+         font-style: normal;
+         font-weight: 600;
+         font-display: swap;
+         src: local('Montserrat SemiBold'), local('Montserrat-SemiBold'), url("/public/fonts/Montserrat/Montserrat-SemiBold.ttf") format('truetype');
+       }
+       @font-face {
+         font-family: 'Montserrat';
+         font-style: italic;
+         font-weight: 600;
+         font-display: swap;
+         src: local('Montserrat SemiBoldItalic'), local('Montserrat-SemiBoldItalic'), url("/public/fonts/Montserrat/Montserrat-SemiBoldItalic.ttf") format('truetype');
+       }
+       @font-face {
+         font-family: 'Montserrat';
+         font-style: normal;
+         font-weight: 700;
+         font-display: swap;
+         src: local('Montserrat Bold'), local('Montserrat-Bold'), url("/public/fonts/Montserrat/Montserrat-Bold.ttf") format('truetype');
+       }
+       @font-face {
+         font-family: 'Montserrat';
+         font-style: italic;
+         font-weight: 700;
+         font-display: swap;
+         src: local('Montserrat BoldItalic'), local('Montserrat-BoldItalic'), url("/public/fonts/Montserrat/Montserrat-BoldItalic.ttf") format('truetype');
+       }
 }
 
 
