teaser gallery added + card cmp updated

--- a/ui.apps/resource/frontend/src/components/molecules/button-link/button-link.scss
+++ b/ui.apps/resource/frontend/src/components/molecules/button-link/button-link.scss
@@ -6,6 +6,7 @@
             @extend .cursor-pointer;
             @extend .flex;
             @extend .items-center;
+            text-decoration: none !important;
 
             .arrow-container{
                 border-width: 1.2px;
