--- a/ui.apps/resource/frontend/src/styles/hbk-111/components/__components-loader--hbk-111.scss
+++ b/ui.apps/resource/frontend/src/styles/hbk-111/components/__components-loader--hbk-111.scss
@@ -18,7 +18,7 @@
 @import "../../../components/molecules/footer/footer.scss";
 @import "../../../components/molecules/hero-carousel/hero-carousel.scss";
 
-// @import "../../../components/molecules/teaser-gallery/teaser-gallery.scss";
+@import "../../../components/molecules/teaser-gallery/teaser-gallery.scss";
 // @import "../../../components/molecules/box/box.scss";
 
 // @import "../../../components/atoms/input/input.scss";
