--- a/ui.apps/resource/frontend/src/styles/hbk-111/components/__components-loader--hbk-111.scss
+++ b/ui.apps/resource/frontend/src/styles/hbk-111/components/__components-loader--hbk-111.scss
@@ -28,7 +28,7 @@
 // @import "../../../components/molecules/tooltip/tooltip.scss";
 // @import "../../../components/molecules/image-extension/image-extension.scss";
 // @import "../../../components/molecules/registration/registration.scss";
-// @import "../../../components/molecules/separator/separator.scss";
+@import "../../../components/molecules/separator/separator.scss";
 // @import "../../../components/molecules/header/header.scss";
 // @import "../../../components/molecules/main-navigation/main-navigation.scss";
 // @import "../../../components/molecules/card/card.scss";
