--- a/ui.apps/resource/frontend/src/styles/hbk-111/components/__components-loader--hbk-111.scss
+++ b/ui.apps/resource/frontend/src/styles/hbk-111/components/__components-loader--hbk-111.scss
@@ -24,14 +24,14 @@
 // @import "../../../components/atoms/input/input.scss";
 // @import "../../../components/atoms/checkbox/checkbox.scss";
 // @import "../../../components/molecules/form-checkbox/form-checkbox.scss";
-// @import "../../../components/molecules/column-control/column-control.scss";
+@import "../../../components/molecules/column-control/column-control.scss";
 // @import "../../../components/molecules/tooltip/tooltip.scss";
 // @import "../../../components/molecules/image-extension/image-extension.scss";
 // @import "../../../components/molecules/registration/registration.scss";
 @import "../../../components/molecules/separator/separator.scss";
 // @import "../../../components/molecules/header/header.scss";
 // @import "../../../components/molecules/main-navigation/main-navigation.scss";
-// @import "../../../components/molecules/card/card.scss";
+@import "../../../components/molecules/card/card.scss";
 // @import "../../../components/molecules/box/box.scss";
 // @import "../../../components/molecules/medical-condition-dropdown/medical-condition-dropdown.scss";
 // @import "../../../components/molecules/search-filter-overlay/search-filter-overlay.scss";
