--- a/ui.apps/resource/frontend/src/components/molecules/card/card.scss
+++ b/ui.apps/resource/frontend/src/components/molecules/card/card.scss
@@ -34,6 +34,13 @@
                     }
                 }
             }
+            .card__footer{
+                .button-link{
+                    a{
+                        @extend .text-ternary;
+                    }
+                }
+            }
         }
     }
 }
