--- a/ui.apps/resource/frontend/src/components/molecules/teaser-gallery/teaser-gallery.scss
+++ b/ui.apps/resource/frontend/src/components/molecules/teaser-gallery/teaser-gallery.scss
@@ -25,6 +25,7 @@
               &.hover-card{
                   .card{
                     position: relative;
+                    @extend .bg-white;
 
                     .button-link{
                         width: 25px;
