--- a/ui.apps/resource/frontend/src/components/molecules/header/header.scss
+++ b/ui.apps/resource/frontend/src/components/molecules/header/header.scss
@@ -2,6 +2,8 @@
     .header {
         &__inner{
             font-family: $roboto;
+            z-index: 9999;
+            
             .image-extension{
                 a{
                      @include media-breakpoint-up(lg) {
