--- a/ui.apps/resource/frontend/src/styles/hbk-111/components/__components-loader--hbk-111.scss
+++ b/ui.apps/resource/frontend/src/styles/hbk-111/components/__components-loader--hbk-111.scss
@@ -19,6 +19,8 @@
 @import "../../../components/molecules/hero-carousel/hero-carousel.scss";
 
 @import "../../../components/molecules/teaser-gallery/teaser-gallery.scss";
+@import "../../../components/molecules/cookie-popup/cookie-popup.scss";
+
 // @import "../../../components/molecules/box/box.scss";
 
 // @import "../../../components/atoms/input/input.scss";
