--- a/ui.apps/resource/frontend/src/components/molecules/column-control/column-control.scss
+++ b/ui.apps/resource/frontend/src/components/molecules/column-control/column-control.scss
@@ -10,6 +10,21 @@
                     height: 100%;
                 }
             }
+
+            .container-fluid {
+                width: 100%;
+                margin-right: auto;
+                margin-left: auto;
+
+                @include media-breakpoint-up(lg){
+                    padding-right: 40px;
+                    padding-left: 40px;
+                }
+                @include media-breakpoint-down(lg){
+                    padding-right: 20px;
+                    padding-left: 20px;
+                }
+            }
         }
     }
 }
